--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <nav class="pc_menu">
                 <ul>
                     <div class="menu_p">
-                        <li><a href="" class="scroll"> Products </a></li>
-                        <li><a href="" class="scroll"> About </a></li>
-                        <li><a href="" class="scroll"> Overview </a></li>
+                        <li><a href="#products" class="scroll"> Products </a></li>
+                        <li><a href="#about" class="scroll"> About </a></li>
+                        <li><a href="#overview" class="scroll"> Overview </a></li>
                     </div>
 
                     <div class="menu_icon">
@@ -75,6 +75,7 @@
     </header>
 
     <main>
+        <!-- products -->
         <section id="products">
             <div class="products_wrap container">
 
@@ -82,15 +83,84 @@
                     <h1>Galaxy</h1>
 
                     <div class="prd_txt">
-                        <h3>Watch 5</h3>
+                        <h3 class="prd_1">Watch 5</h3>
                         <h3>│</h3>
-                        <h3>Watch 5 Pro</h3>
+                        <h3 class="prd_2">Watch 5 Pro</h3>
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- About -->
+        <section id="about">
+            <div class="about_wrap container">
+                <div class="about_info">
+                    <div class="about_title">
+                        <h2>Galaxy</h2>
+                        <h1>Watch5</h1>
+                    </div>
+                    <h5>사파이어 크리스탈</h5>
+                    <p>거친 활동에도 문제 없는 갤럭시 워치 5를 소개합니다. <br>
+                        긁힘에 1.6배 더 강한 사파이어 크리스탈 디스플레이를 만나보세요.<br>
+                        당신이 어떤 하루를 보내든 문제 없죠.
+                    </p>
+                    <button>자세히보기</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Overview -->
+        <section id="overview">
+            <div class="overview_wrap container">
+                <div class="overview_img">
+                    <img src="media/sub2_img.png" alt="overview_img">
+                </div>
+                <div class="overview_txt">
+                    <h5>당신의 페이스대로 꾸미는</h5>
+                    <h2>워치 페이스</h2>
+                    <p>아날로그부터 디지털, 빈티지부터 모던까지.<br>
+                        하루의 시작을 도와줄 <span>워치 페이스</span> 를 골라보세요.<br>
+                        당신의 취향에 맞는 다양한 디자인을 선택할 수 있죠.
+                    </p>
+                    <button>자세히보기</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- sub_end -->
+        <section id="sub_end">
+            <div class="end_wrap container">
+                <img src="media/sub3_img.png">
+            </div>
+        </section>
     </main>
-    <!-- 반응형 메뉴 -->
+
+    <footer>
+        <div class="footer_wrap container">
+            <div class="footer_icon">
+                <img src="media/Facebook.svg">
+                <img src="media/Instagram.svg">
+                <img src="media/YouTube.svg">
+            </div>
+            <div class="footer_info">
+                <p class="hover">글로벌 네트워크</p>
+                <p>│</p>
+                <p class="hover">개인정보처리방침</p>
+                <p>│</p>
+                <p class="hover">윤리경영</p>
+                <p>│</p>
+                <p class="hover">경영정보</p>
+                <p>│</p>
+                <p class="hover">사이트맵</p>
+            </div>
+            <p>사업자등록번호 : 2023-03-04 ~ 2023-03-07
+                |       디자이너 : 박해주
+                 |      퍼블리셔 : 박해주    |    (주)0000 서울시 성북구 000(0000--2가 6번지)<br>
+                삼성 갤럭시 구매안전 서비스
+                |    고객님은 안전거래를 위해 현금 등으로 결제시 저희 쇼핑몰에서 가입한 구매안전 (에스크로) 서비스를 이용하실 수 있습니다. <br>
+                Copyright  © 1995-2023 25Hz.  All Rights Reserved.</p>
+        </div>
+    </footer>
     
 
     <!-- script -->
