--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <section id="products">
             <div class="products_wrap container">
 
-                <div class="products_txt">
+                <div class="products_txt" 
+                data-aos="fade-zoom-in"
+                data-aos-duration="2000">
                     <h1>Galaxy</h1>
 
                     <div class="prd_txt">
@@ -62,7 +64,9 @@
         <!-- About -->
         <section id="about">
             <div class="about_wrap container">
-                <div class="about_info">
+                <div class="about_info"
+                data-aos="fade-right"
+                data-aos-duration="2000">
                     <div class="about_title">
                         <h2>Galaxy</h2>
                         <h1>Watch5</h1>
@@ -83,7 +87,9 @@
                 <div class="overview_img">
                     <img src="media/sub2_img.png" alt="overview_img">
                 </div>
-                <div class="overview_txt">
+                <div class="overview_txt"
+                data-aos="fade-up"
+                data-aos-duration="2000">
                     <h5>당신의 페이스대로 꾸미는</h5>
                     <h2>워치 페이스</h2>
                     <p>아날로그부터 디지털, 빈티지부터 모던까지.<br>
@@ -133,5 +139,7 @@
 
     <!-- script -->
     <script src="index.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init(); </script>
 </body>
 </html>
